--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  zoom: 70%;
 }
 button {
   display: inline-block;
