--- a/css/main.less
+++ b/css/main.less
@@ -13,13 +13,13 @@ body {
   width: 100%;
 }
 
-/* @media (min-width:800px) {
-    html {
-        height: 142.857%;
-        transform-origin: 0 0;
-        transform: scale(0.7);
-    }
-} */
+// /* @media (min-width:800px) {
+//     html {
+//         height: 142.857%;
+//         transform-origin: 0 0;
+//         transform: scale(0.7);
+//     }
+// } */
 
 body {
   font-size: 25px;
@@ -175,7 +175,7 @@ input[type="radio"]:checked + label:before {
 
   #content_bitting {
     textarea,
-    input[type="text"] {
+    input {
       font-size: 1.2rem;
       border: 2px solid #999;
       padding: 3px 6px;
@@ -188,11 +188,10 @@ input[type="radio"]:checked + label:before {
       font-size: 1rem;
     }
 
-    #types {
-      padding: 0.5em 0;
-      display: flex;
-      align-items: center;
-      justify-content: space-evenly;
+    #types select {
+      font-size: large;
+      margin: 0.5em 0;
+      padding: 0.5em;
     }
   }
 
