--- a/css/main.css
+++ b/css/main.css
@@ -69,19 +69,22 @@ input[type="radio"]:checked + label:before {
   justify-content: center;
   align-items: center;
 }
-#modal_outer {
-  display: none;
+#modal_outer[open] {
+  display: flex;
   height: 100%;
   width: 100%;
-  z-index: 100;
-  background: rgba(0, 0, 0, 0.7);
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: transparent;
   justify-content: center;
   align-items: center;
 }
-#modal_outer #modal_mid {
+#modal_outer[open]::backdrop {
+  background: rgba(0, 0, 0, 0.7);
+}
+#modal_outer[open] #modal_mid {
   width: 90%;
   background: whitesmoke;
   padding: 1em;
@@ -92,7 +95,7 @@ input[type="radio"]:checked + label:before {
   border: 2px solid #444;
   border-radius: 5px;
 }
-#modal_outer #modal_mid #modal_inner {
+#modal_outer[open] #modal_mid #modal_inner {
   margin-bottom: 0.5rem;
   padding: 0.5em;
 }
