key.js good enough

--- a/css/main.css
+++ b/css/main.css
@@ -166,7 +166,7 @@ input[type="radio"]:checked + label:before {
   padding: 0.5rem;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 #content_of_tabs #content_photo ul {
   margin-left: 2em;
