--- a/css/main.less
+++ b/css/main.less
@@ -211,7 +211,7 @@ input[type="radio"]:checked + label:before {
       padding: 0.5rem;
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: space-between;
     }
   }
 
