--- a/css/main.less
+++ b/css/main.less
@@ -1,10 +1,15 @@
-@import url(OpenSans.css);
+@import url("theme.less");
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  border: 0;
+@text-color: @light-color[b];
+@bg-darker: @dark-color[d];
+@tab-color: @dark-color[b];
+
+@radius: 0.5em;
+
+@media (min-width: 800px) {
+  body {
+    zoom: 70%;
+  }
 }
 
 html,
@@ -12,14 +17,6 @@ body {
   height: 100%;
   width: 100%;
 }
-
-// /* @media (min-width:800px) {
-//     html {
-//         height: 142.857%;
-//         transform-origin: 0 0;
-//         transform: scale(0.7);
-//     }
-// } */
 
 body {
   font-size: 25px;
@@ -29,65 +26,23 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  zoom: 70%;
 }
 
-button {
-  display: inline-block;
+p h2 {
+  font-size: 0.8em;
+}
+
+.btn {
   font-size: 1em;
-  border: 4px solid #999;
-  border-radius: 0.7rem;
-  padding: 0.5rem 1rem;
+  border: 1px solid @light-color[f];
+  border-radius: @radius;
+  padding: 0.5em 1em;
   cursor: pointer;
-
-  &:hover {
-    background: #fdd;
-  }
-}
-
-p {
-  font-size: 25px;
-}
-
-textarea {
-  height: 45px;
-}
-
-input[type="radio"] {
-  opacity: 0;
-}
-
-input[type="radio"] + label {
-  cursor: pointer;
-  margin-left: -8px;
-
-  display: inline-block;
-  padding: 13px 0;
-}
-
-input[type="radio"] + label:before {
-  content: "";
-
-  background: #fff;
-  border-radius: 100%;
-  border: 3px solid #888;
-  display: inline-block;
-  width: 18px;
-  height: 18px;
-  position: relative;
-  top: 2px;
-  cursor: pointer;
-}
-
-input[type="radio"]:checked + label:before {
-  background: #444;
-  box-shadow: inset 0 0 0 2px white;
 }
 
 #container {
   width: 700px;
-  background: #ddf;
-
+  background: @tab-color;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -95,70 +50,68 @@ input[type="radio"]:checked + label:before {
 }
 
 #modal_outer[open] {
-  display: flex;
+  @backdrop: #000000b3;
   height: 100%;
-  width: 100%;
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: transparent;
-  justify-content: center;
-  align-items: center;
+  background: transparent;
+  color: @text-color;
 
   &::backdrop {
-    background: rgba(0, 0, 0, 0.7);
+    background: @backdrop;
   }
 
   #modal_mid {
-    width: 90%;
-    background: whitesmoke;
     padding: 1em;
-
+    box-shadow: 0 0 20px 12px black;
+    background: @backdrop;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-    border: 2px solid #444;
-    border-radius: 5px;
+    border: 1px solid @dark-color[e];
+    border-radius: @radius;
 
     #modal_inner {
-      margin-bottom: 0.5rem;
-      padding: 0.5em;
+      padding: 1em 0;
     }
   }
 }
 
 #list_of_tabs {
   width: 100%;
-  background: white;
+  background: @bg-darker;
   display: flex;
   justify-content: space-between;
 
   .sel {
-    background: #ddf;
+    background: @tab-color;
   }
 
   a {
     display: inline-block;
-    border: 4px solid #ddf;
+    border: 1px solid @dark-color[f];
     border-bottom: none;
-    border-radius: 10px 10px 0 0;
-    font-size: 1em;
-    padding: 0.5rem;
-    text-decoration: none;
-    color: #333333;
-    font-weight: bold;
+    border-radius: @radius @radius 0 0;
+    padding: 0.75rem;
+    cursor: pointer;
 
-    &:focus {
-      outline: 0;
-    }
+    text-decoration: none;
+    color: @light-color[c];
+    font-weight: bold;
+    font-size: 1em;
   }
 }
 
 #content_of_tabs {
   width: 100%;
+  height: 100%;
   padding: 0.5em;
   // background: #ccc;
 
@@ -177,18 +130,24 @@ input[type="radio"]:checked + label:before {
   }
 
   #content_bitting {
+    select {
+      border-radius: @radius;
+    }
+
     textarea,
     input {
       font-size: 1.2rem;
       border: 2px solid #999;
+      border-radius: @radius;
       padding: 3px 6px;
-      margin: 7px 0 0 0;
+      margin: 0.25rem 0 0 0;
       font-family: "Lucida Console", monospace;
       resize: none;
     }
 
     small {
       font-size: 1rem;
+      margin: 1em 0;
     }
 
     #types select {
@@ -205,6 +164,11 @@ input[type="radio"]:checked + label:before {
       display: flex;
       align-items: center;
       justify-content: space-between;
+      padding: 0.5rem;
+
+      input {
+        scale: 150%;
+      }
     }
 
     #align_tools2 {
@@ -248,33 +212,35 @@ input[type="radio"]:checked + label:before {
     font-size: 70%;
     padding: 0px 10px;
     border: none;
-    color: #333;
+    color: @light-color[a];
   }
 
   td {
-    width: 60px;
+    width: 3.75em;
     text-align: center;
-    padding: 0px 10px;
+    padding: 0px 0.5em;
     font-size: 50%;
 
     .sel {
-      border-color: #888 !important;
+      border-color: @light-color[d] !important;
     }
   }
 
+  // bitting numbers
   tr:nth-child(1) td {
     font-family: monospace;
     font-size: 140%;
     font-weight: bold;
-    border: 4px solid rgba(0, 0, 0, 0);
+    border: 4px solid transparent;
     border-bottom: none;
-    background: #eee;
-    height: 60px;
+    height: 3.75em;
   }
 
+  // tolerance numbers
   tr:nth-child(2) td {
-    border: 4px solid rgba(0, 0, 0, 0);
-    border-top: none;
+    border: 4px solid transparent;
+    border-top: 4px solid transparent;
+    color: black;
   }
 
   tr:nth-child(3) td {
@@ -283,7 +249,12 @@ input[type="radio"]:checked + label:before {
 }
 
 #graph {
+  background: whitesmoke;
   margin: 0.5rem 0;
+}
+
+#svg img {
+  filter: invert(1);
 }
 
 #footer {
@@ -292,11 +263,12 @@ input[type="radio"]:checked + label:before {
   padding: 0.5em;
 
   a {
+    color: @theme-color[yellow];
     text-decoration: none;
     padding-right: 20px;
 
     &:hover {
-      color: red;
+      color: @theme-color[red];
       background: inherit;
     }
   }
@@ -307,19 +279,58 @@ input[type="radio"]:checked + label:before {
 }
 
 .hl {
-  border-color: #fcc !important;
-  background: #fee !important;
+  border-color: @light-color[b] !important;
+  background: @dark-color[a] !important;
   cursor: pointer;
 }
 
 .good {
-  background: #8f8 !important;
+  background: @theme-color[green] !important;
 }
 
 .maybe {
-  background: #ff8 !important;
+  background: @theme-color[yellow] !important;
 }
 
 .bad {
-  background: #f44 !important;
+  background: @theme-color[red] !important;
 }
+
+// p {
+//   font-size: 25px;
+// }
+
+// textarea {
+//   height: 45px;
+// }
+
+// input[type="radio"] {
+//   opacity: 0;
+// }
+
+// input[type="radio"] + label {
+//   cursor: pointer;
+//   margin-left: -8px;
+
+//   display: inline-block;
+//   padding: 13px 0;
+// }
+
+// input[type="radio"] + label:before {
+//   content: "";
+
+//   background: #fff;
+//   border-radius: 100%;
+//   border: 3px solid #888;
+//   display: inline-block;
+//   width: 18px;
+//   height: 18px;
+//   position: relative;
+//   top: 2px;
+//   cursor: pointer;
+// }
+
+// input[type="radio"]:checked + label:before {
+//   background: #444;
+//   box-shadow: inset 0 0 0 2px white;
+// }
